[package]
name = "chip8"
version = "0.1.0"
authors = ["Marc Noirot <marc.noirot@gmail.com>"]
description = """chip8 emulator"""
documentation = "https://github.com/noirotm/chip8"
homepage = "https://github.com/noirotm/chip8"
repository = "https://github.com/noirotm/chip8"
keywords = ["emulator", "vm", "chip-8"]
categories = ["command-line-utilities", "emulation"]
license = "MIT"
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "chip8"

[workspace]
members = [
    "chip8-system",
    "gui-druid",
    "sound-cpal"
]

[dependencies]
chip8-system = { path = "chip8-system" }
clap = "3.0.0-beta.2"
sound-cpal = { path = "sound-cpal" }
gui-druid = { path = "gui-druid" }
