[package]
name = "chip8-system"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.2.1"
bitvec = "0.22.3"
crossbeam-channel = "0.5.1"
num-traits = "0.2.14"
num-derive = "0.3.3"
parking_lot = "0.11.1"
rand = { version = "0.8.4", features = [ "small_rng" ] }
spin_sleep = "1.0.0"

[dev-dependencies]
approx = "0.5.0"
