[package]
name = "chip8-system"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4.1"
bitvec = "1.0.1"
crossbeam-channel = "0.5.1"
num-traits = "0.2.14"
num-derive = "0.4.1"
parking_lot = "0.12.1"
rand = { version = "0.8.5", features = [ "small_rng" ] }
spin_sleep = "1.1.0"

[dev-dependencies]
approx = "0.5.0"
