[package]
name = "gui-druid"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8-system = { path = "../chip8-system" }
crossbeam-channel = "0.5.1"
druid = { git = "https://github.com/linebender/druid.git" }
